classDiagram
    class levels {
        +INTEGER level_id PK
        +INTEGER difficulty
        +INTEGER created_at
    }
    class level_tiles {
        +INTEGER level_id FK
        +INTEGER tile_index
        +TEXT tile_id
        +INTEGER x
        +INTEGER y
        +INTEGER z
        +INTEGER type
        +INTEGER is_blind
        +INTEGER sealed_count
        +INTEGER seal_unlock_threshold
    }
    class backup_save_log {
        +INTEGER id PK
        +TEXT user_id FK
        +INTEGER points
        +INTEGER created_at
    }
    class backup_unlocked_levels {
        +INTEGER backup_id FK
        +INTEGER level_id
    }
    class backup_save_items {
        +INTEGER backup_id FK
        +TEXT item_type
        +INTEGER count
    }
    class admin_audit_log {
        +INTEGER id PK
        +TEXT admin_id
        +TEXT admin_phone
        +TEXT admin_role
        +TEXT action
        +TEXT target_type
        +TEXT target_id
        +TEXT source_ip
        +TEXT user_agent
        +INTEGER created_at
    }
    class admin_audit_changes {
        +INTEGER change_id FK
        +TEXT field
        +TEXT old_val
        +TEXT new_val
    }
    class game_commands {
        +INTEGER id PK
        +TEXT game_id
        +TEXT sender_id
        +TEXT command_data
        +INTEGER created_at
    }

    levels "1" *-- "0..*" level_tiles : level_id
    backup_save_log "1" *-- "0..*" backup_unlocked_levels : backup_id
    backup_save_log "1" *-- "0..*" backup_save_items : backup_id
    admin_audit_log "1" *-- "0..*" admin_audit_changes : id == change_id
    note for game_commands "command_data 保留为 TEXT（高频中继缓冲，唯一例外）"
